--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,6 @@ before_script:
 
 build:
   script:
-    - lftp -c "set ftp:ssl-allow no; open $FTP_SERVER; user $FTP_USERNAME $FTP_PASSWORD; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --exclude .gitlab-ci.yml --reverse --verbose ./ ./; bye"
+    - lftp -c "set ftp:ssl-allow no; open $FTP_SERVER_TWO; user $FTP_USERNAME $FTP_PASSWORD; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --exclude .gitlab-ci.yml --reverse --verbose ./ ./; bye"
   only:
     - main
