--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,5 @@ jobs:
       
     - name: Deploy to production
       run: |
-        lftp -c "open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} sftp://${{ secrets.FTP_SERVER_TWO }}; mirror --reverse --verbose --exclude .gitlab-ci.yml ./ ./; bye"
+        lftp -c "open -u ${{ secrets.FTP_USERNAME }},${{ secrets.FTP_PASSWORD }} sftp://${{ secrets.FTP_SERVER }}; mirror --reverse --verbose --exclude .gitlab-ci.yml ./ ./; bye"
+        
