--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   deploy:
-    runs-on: self-hosted  # Este flujo de trabajo se ejecutará en un runner autoservido
+    #runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     env:
       FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
