--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,12 @@ on:
 
 jobs:
   deploy:
-    #runs-on: self-hosted
     runs-on: ubuntu-latest
     
     env:
-      FTP_USERNAME: vsantana
-      FTP_PASSWORD: A1b2C3d4E5
-      PRODUCTION_SERVER_IP: 217.160.229.108
+        FTP_SERVER: ${{ secrets.FTP_SERVER }}
+        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
     
     steps:
     - name: Checkout repository
