--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
       run: sudo apt-get install lftp -y
       
     - name: Deploy to production
-      run: lftp -u vsantana,A1b2C3d4E5 sftp://217.160.229.108 -e "mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --exclude .gitlab-ci.yml --reverse --verbose /home/vsantana/ ./; bye"
+      run: lftp -c "open -u vsantana,A1b2C3d4E5 217.160.229.108; set ftp:ssl-force true; set ssl:verify-certificate no; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --reverse --verbose ./ /home/vsantana; bye"
