--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     
     env:
-        FTP_SERVER: 217.160.229.108
-        FTP_USERNAME: vsantana
-        FTP_PASSWORD: A1b2C3d4E5
+        FTP_SERVER: ${{ secrets.FTP_SERVER }}
+        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+        FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+        FTP_FOLDER: ${{ secrets.FTP_FOLDER }}
     
     steps:
     - name: Checkout repository
@@ -22,4 +23,4 @@ jobs:
       run: sudo apt-get install lftp -y
       
     - name: Deploy to production
-      run: lftp -c "open -u vsantana,A1b2C3d4E5 217.160.229.108; set ftp:ssl-force true; set ssl:verify-certificate no; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --reverse --verbose ./ /home/vsantana; bye"
+      run: lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER; set ftp:ssl-force true; set ssl:verify-certificate no; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .gitignore --reverse --verbose ./ $FTP_FOLDER; bye"
