--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
           echo "SSH_USER"
           chmod 600 ~/.ssh/id_rsa
 
-          rsync -avz --exclude='dist/' -e "ssh -o StrictHostKeyChecking=no -p 2220" ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
+          rsync -avz --exclude='dist/' -e "ssh -o StrictHostKeyChecking=no -p 2220 -i ~/.ssh/id_rsa" ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
 
           ssh $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
