--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy
+
 on:
   push:
     branches:
@@ -13,6 +14,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Check if SSH_PRIVATE_KEY is masked
+        run: echo "$SSH_PRIVATE_KEY"
+
       - name: Configure SSH and deploy
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -24,19 +28,6 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          # Verificar si el archivo id_rsa se creó correctamente
-          ls -al ~/.ssh
+          rsync -avz --exclude='dist/' -e "ssh -o StrictHostKeyChecking=no -p 2220" ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
 
-          # Verificar el contenido del archivo id_rsa (opcional)
-          cat ~/.ssh/id_rsa
-
-          # Verificar si el contenido de la clave es el esperado (opcional)
-          echo "$SSH_PRIVATE_KEY"
-
-          # Intentar conectar al servidor remoto utilizando la clave SSH
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p 2220 $SSH_USER@$SSH_SERVER "echo Conexión exitosa"
-
-          # Si la conexión fue exitosa, proceder con el despliegue
-          rsync -avz --exclude='dist/' -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p 2220" ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
-
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
+          ssh $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
