--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           
           # Excluyendo archivos y carpetas específicas durante la sincronización con rsync
           rsync -avz --exclude='.gitignore' --exclude='deploy.yml' --exclude='.git/' --exclude='.github/' --exclude='dist/' \
-            --timeout=600 -e "ssh -o StrictHostKeyChecking=no -p 2220 -o ConnectTimeout=300" \
+            -e "ssh -o StrictHostKeyChecking=no -p 2220" \
             ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
           
           ssh $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
