--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create marker file
-        run: touch rsync_finished.txt
-
       - name: Configure SSH and deploy
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -35,4 +32,4 @@ jobs:
           
           
       - name: Run remote commands after SSH deploy
-        run: ssh -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && ls rsync_finished.txt && npm run build"
+        run: ssh -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm run build"
