--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           
           # Excluyendo archivos y carpetas específicas durante la sincronización con rsync
-          rsync -avz --exclude='.gitignore' --exclude='deploy.yml' --exclude='.git/' --exclude='.github/' --exclude='dist/' \
+          rsync -avz --exclude='.gitignore' --exclude='deploy.yml' --exclude='.git/' --exclude='.github/' --exclude='package-lock.json' --exclude='dist/' \
             --timeout=600 -e "ssh -o StrictHostKeyChecking=no -p 2220 -o ConnectTimeout=300 -o ServerAliveInterval=90" \
             ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
             
-          ssh -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm run build"
+          ssh -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
