--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,21 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
   deployment:
+    needs: build
     runs-on: ubuntu-latest
     environment: Production
 
@@ -14,7 +28,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Configure SSH deploy and npm build
+      - name: Create marker file
+        run: touch rsync_finished.txt
+
+      - name: Configure SSH and deploy
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_USER: martatorreprojects.co_fwg0rscgqj
@@ -26,8 +43,6 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           
           # Excluyendo archivos y carpetas específicas durante la sincronización con rsync
-          rsync -avz --exclude='.gitignore' --exclude='deploy.yml' --exclude='.git/' --exclude='.github/' --exclude='package-lock.json' --exclude='dist/' \
+          rsync -avz --exclude='.gitignore' --exclude='deploy.yml' --exclude='.git/' --exclude='.github/' \
             --timeout=600 -e "ssh -o StrictHostKeyChecking=no -p 2220 -o ConnectTimeout=300 -o ServerAliveInterval=90" \
             ./ $SSH_USER@$SSH_SERVER:$SSH_FOLDER
-            
-          ssh -p 2220 $SSH_USER@$SSH_SERVER "cd $SSH_FOLDER && npm install && npm run build"
