--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "serve": "webpack serve"
   },
+  "symlinks": false,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
