--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
 
     - name: Deploy to production
       run: |
-        lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER; set ftp:ssl-force true; set ssl:verify-certificate no; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .github/ --exclude .gitignore --exclude deploy.yml --exclude '.* -> .*' --reverse --verbose ./ $FTP_FOLDER; bye" || true  
+        lftp -c "open -u $FTP_USERNAME,$FTP_PASSWORD $FTP_SERVER; set ftp:ssl-force true; set ssl:verify-certificate no; mirror --ignore-time --parallel=10 --exclude vendor/ --exclude .git/ --exclude .github/ --exclude .gitignore --exclude deploy.yml --exclude 'node_modules/' --reverse --verbose ./ $FTP_FOLDER; bye" || true  
