--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
-  "homepage": "https://gigsonsolutions.com",
+  "homepage": "webgigson.martatorreprojects.com",
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
