--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "serve": "webpack serve"
   },
   "dependencies": {
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-router-dom": "^6.22.3"
   },
+  "homepage": "webgigson.martatorreprojects.com",
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -23,7 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.8",
+    "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
